add a picture for fb

--- a/vrDemo.html
+++ b/vrDemo.html
@@ -1,8 +1,15 @@
  <!DOCTYPE html>
- <html>
+ <html xmlns:og='http://ogp.me/ns#'>
   <head>
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-
+    <title>[webVR] projectForest</title>
+    <meta property='og:type' content='article' />
+    <meta property='article:author' content='https://jenhsuan.github.io/Site'/>
+    <meta property='og:title' content='[webVR] projectForest' />
+    <meta property='og:url' content='http://blog.twsiyuan.com/example.html'/>
+    <meta property='og:image' content='http://blog.twsiyuan.com/example.jpg'/>
+    <meta property='og:description' content='這是範例的說明'/>
+    <meta property='og:site_name' content='我的網站'/>
 </head>
 <body>
    <a-scene>
