--- a/vrDemo.html
+++ b/vrDemo.html
@@ -7,7 +7,10 @@
     <meta property='article:author' content='https://jenhsuan.github.io/Site'/>
     <meta property='og:title' content='[webVR] projectForest' />
     <meta property='og:url' content='https://jenhsuan.github.io/projectForest/vrDemo.html'/>
-    <meta property='og:image' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
+    <meta property='og:image:secure_url' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
+    <meta property="og:image:type" content="image/jpeg" /> 
+    <meta property="og:image:width" content="800" /> 
+    <meta property="og:image:height" content="413" />
     <meta property='og:description' content='This is a demo site for our forest which use webVR (A-Frame) to let people to be personally on the scene'/>
     <meta property='og:site _name' content='[webVR] projectForest'/>
 </head>
