--- a/vrDemo.html
+++ b/vrDemo.html
@@ -4,7 +4,7 @@
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
     <title>[webVR] projectForest</title>
     <meta property='og:type' content='article' />
-    <meta property='article:author' content='https://jenhsuan.github.io/Site'/>
+    <meta property='og:article:author' content='https://jenhsuan.github.io/Site'/>
     <meta property='og:title' content='[webVR] projectForest' />
     <meta property='og:url' content='https://jenhsuan.github.io/projectForest/vrDemo.html'/>
     <meta property='og:image:secure_url' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
