modify picture for fb

--- a/vrDemo.html
+++ b/vrDemo.html
@@ -7,7 +7,7 @@
     <meta property='og:article:author' content='https://jenhsuan.github.io/Site'/>
     <meta property='og:title' content='[webVR] projectForest' />
     <meta property='og:url' content='https://jenhsuan.github.io/projectForest/vrDemo.html'/>
-    <meta property='og:image' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
+    <meta property='og:image:url' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
     <meta property='og:image:secure_url' content='https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForestCover.jpg'/>
     <meta property="og:image:type" content="image/jpeg" /> 
     <meta property="og:image:width" content="800" /> 
