--- a/vrDemo.html
+++ b/vrDemo.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
     <title>[webVR] projectForest</title>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/logo.ico">
     <meta property='og:type' content='article' />
     <meta property='og:title' content='[webVR] projectForest' />
     <meta property='og:url' content='https://jenhsuan.github.io/projectForest/vrDemo.html'/>
