--- a/vrDemo.html
+++ b/vrDemo.html
@@ -25,29 +25,29 @@
             <img id="skyTexture4" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForest_6.jpg">
             <img id="skyTexture5" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForest_5.jpg">
             <img id="skyTexture6" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/projectForest_7_.jpg">
-            <img id="viewPoint1" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint1_.jpg">
-            <img id="viewPoint2" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint2_.jpg">
-            <img id="viewPoint3" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint3_.jpg">
-            <img id="viewPoint4" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint4_.jpg">
-            <img id="viewPoint5" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint5_.jpg">
-            <img id="viewPoint6" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint6_.jpg">
+            <img id="viewPoint1" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint1.jpg">
+            <img id="viewPoint2" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint2.jpg">
+            <img id="viewPoint3" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint3.jpg">
+            <img id="viewPoint4" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint4.jpg">
+            <img id="viewPoint5" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint5.jpg">
+            <img id="viewPoint6" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint6.jpg">
         </a-assets>
-        <a-box id="box01" color="red" depth="30" height="30" width="5" src="#viewPoint1">
+        <a-box id="box01" color="white" depth="30" height="30" width="30" src="#viewPoint1">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
-        <a-box id="box02" color="#6173F4" depth="30" height="30" width="5" src="#viewPoint2">
+        <a-box id="box02" color="white" depth="30" height="30" width="30" src="#viewPoint2">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
-        <a-box id="box03" color="green" depth="30" height="30" width="5" src="#viewPoint3">
+        <a-box id="box03" color="white" depth="30" height="30" width="30" src="#viewPoint3">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
-        <a-box id="box04" color="yellow" depth="30" height="30" width="5" src="#viewPoint4">
+        <a-box id="box04" color="white" depth="30" height="30" width="30" src="#viewPoint4">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
-        <a-box id="box05" color="gray" depth="30" height="30" width="5" src="#viewPoint5">
+        <a-box id="box05" color="white" depth="30" height="30" width="30" src="#viewPoint5">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
-        <a-box id="box06" color="purple" depth="30" height="30" width="5" src="#viewPoint6">
+        <a-box id="box06" color="white" depth="30" height="30" width="30" src="#viewPoint6">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
         <a-entity position="0 0 0 " id="c" rotation="0 270 0">
