--- a/vrDemo.html
+++ b/vrDemo.html
@@ -31,7 +31,10 @@
             <img id="viewPoint4" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint4.jpg">
             <img id="viewPoint5" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint5.jpg">
             <img id="viewPoint6" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/ViewPoint6.jpg">
+            <img id="map1" src="https://raw.githubusercontent.com/JenHsuan/projectForest/gh-pages/asset/map_5.jpg">
+            <a-mixin id="marker" geometry="primitive: plane; width: 20; height: 2" material="color: red"></a-mixin>
         </a-assets>
+        <a-box id="plane" src="#map1" color="white" height="10" width="0" depth="10" rotation="90 0 0" position="14 0 0"></a-box>
         <a-box id="box01" color="white" depth="30" height="30" width="30" src="#viewPoint1">
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
@@ -51,7 +54,6 @@
             <a-animation attribute="rotation" to="360 360 360" direction="alternate" dur="12000" repeat="indefinite"></a-animation>
         </a-box>
         <a-entity position="0 0 0 " id="c" rotation="0 270 0">
-            <a-light type="point" intensity="2" position="2 4 4"></a-light>
             <a-camera id="cam">
                 <a-cursor></a-cursor>
             </a-camera>
